--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <button onclick="findOppositeNumber2()">Tìm</button>
 
     <h2>GỘP CHUỖI</h2>
-    <input id="string1" placeholder="Nhập chuỗi là chữ cái"></input>
-    <input id="string2" placeholder="Nhập chuỗi là chữ số"></input>
-    <button onclick="merge()">merge</button>
+    <input id="s1" placeholder="Nhập chuỗi"></input>
+    <input id="s2" placeholder="Nhập chuỗi"></input>
+    <button onclick="merge2Str()">merge</button>
 
 </body>
 <footer>
