--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
     <input id="s1" placeholder="Nhập chuỗi"></input>
     <input id="s2" placeholder="Nhập chuỗi"></input>
     <button onclick="merge2Str()">merge</button>
+    <h2>LUCKY NUMBER</h2>
+    <input type="number" id="userNumber" placeholder="CHỌN SỐ TỪ 0 ĐẾN 9"></input>
+    <button id="btn" onclick="random(), count2()">QUAY SỐ</button>
+    <p id="luotQuay">SỐ LƯỢT QUAY CỦA BẠN LÀ 3</p>
+    <h2 id="count">3</h2>
+    <p>YOUR NUMBER</p>
+    <h2 id="userChooses">0</h2>
+    <p>LUCKY NUMBER</p>
+    <h2 id="luckyNumber">0</h2>
 
 </body>
+
 <footer>
 
 </footer>
